# MyVulkanRenderer

./: .gitignore  CMakeLists.txt  LICENSE-MIT  README.md
scripts/: install_dependencies_macos.sh
shaders/: simple_shader.vert
src/: first_app.cpp  first_app.h  main.cpp
src/core/: device.cpp  device.h  pipeline.cpp  pipeline.h  swap_chain.cpp  swap_chain.h  vulkan_device.cpp  vulkan_device.h  window.cpp  window.h
src/scene/: model.cpp  model.h
